crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_partition__simple_blueprint_partitions_data.snap
---
source: crates/store/re_redap_tests/src/tests/register_partition.rs
expression: filtered_batch.format_snapshot(false)
---
┌────────────────────────┬───────────────────┬──────────────────┐
│ rerun_partition_id     ┆ rerun_layer_names ┆ rerun_num_chunks │
╞════════════════════════╪═══════════════════╪══════════════════╡
│ blueprint_partition_id ┆ [base]            ┆ 1                │
└────────────────────────┴───────────────────┴──────────────────┘
