crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_partition__simple_partitions_schema.snap
---
source: crates/store/re_redap_tests/src/tests/register_partition.rs
expression: batch.format_schema_snapshot()
---
rerun_last_updated_at: Timestamp(ns)
rerun_layer_names: List[Utf8]
rerun_num_chunks: u64
rerun_segment_id: Utf8
rerun_size_bytes: u64
rerun_storage_urls: List[Utf8]
