crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_partition__simple_with_layers_partitions_data.snap
---
source: crates/store/re_redap_tests/src/tests/register_partition.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬───────────────────┬──────────────────┐
│ rerun_segment_id ┆ rerun_layer_names ┆ rerun_num_chunks │
╞══════════════════╪═══════════════════╪══════════════════╡
│ partition1       ┆ [base, extra]     ┆ 8                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ partition2       ┆ [base, extra]     ┆ 6                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ partition3       ┆ [base]            ┆ 2                │
└──────────────────┴───────────────────┴──────────────────┘
